inyoka_theme_ubuntuusers/static/style/markup.less
/**
 * style.markup
 * ~~~~~~~~~~~~
 *
 * :copyright: (c) 2011-2019 by the Inyoka Team, see AUTHORS for more details.
 * :license: BSD, see LICENSE for more details.
 */

@import 'layout.less';
@import 'icon-sprite.less';

:link.missing, :visited.missing {
  color: #999 !important;
}

a.interwiki {
  background-repeat: no-repeat;
}
a.user, a.team, a.search {
  background-repeat: no-repeat;
  padding-left: 16px;
}

a.user {
  background-image: url(../img/interwiki/user.png);
}
a.team {
  background-image: url(../img/interwiki/team.png);
  color: #597A00;
}
a.search {
  background-image: url(../img/interwiki/search.png);
}

a.interwiki-bug {
  background-image: url(../img/interwiki/bug.png);
  padding-left: 20px;
}
a.interwiki-getdeb {
  background-image: url(../img/interwiki/getdeb.png);
  padding-left: 20px;
}
a.interwiki-googlecode {
  background-image: url(../img/interwiki/googlecode.png);
  padding-left: 20px;
}
a.interwiki-isbn {
  background-image: url(../img/interwiki/isbn.png);
  padding-left: 20px;
}
a.interwiki-launchpad {
  background-image: url(../img/interwiki/launchpad.png);
  padding-left: 20px;
}
a.interwiki-lpuser {
  background-image: url(../img/interwiki/lpuser.png);
  padding-left: 20px;
}
a.interwiki-sourceforge {
  background-image: url(../img/interwiki/sourceforge.png);
  padding-left: 20px;
}
a.interwiki-ubuntu {
  background-image: url(../img/interwiki/ubuntu.png);
  padding-left: 20px;
}
a.interwiki-wikipedia {
  background-image: url(../img/interwiki/wikipedia.png);
  padding-left: 20px;
}
a.interwiki-wikipedia_en {
  background-image: url(../img/interwiki/wikipedia_en.png);
  padding-left: 20px;
}

#page table {
  width: auto; // override behaviour of main.css for wiki & ikhaya
}
#page table td, #page table th {
  border-width: 1px;
}
span.underline {
  text-decoration: underline;
}
.image-left, .image-right, .image-center {
  margin: 1.5em 1em 0;
}
.image-right {
  float: right;
  clear: right;
}
.image-left {
  float: left;
}
.image-center {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

div.bash {
  margin: 0.3em 1em;
  pre {
    color: white;
    font-family: @font-monospace;
    background-color: #454545;
    border: 1px solid #666;
    .highlighted {
      background-color: #ffee33;
      color: #454545;
    }
  }
  pre + pre {
    border-top:0 none;
    margin-top:-0.3em;
  }
}

div.box {
  .rounded(5px);
  margin: 0.5em 0em;
  border: 1px solid #bbb;
  clear: none;
  overflow: auto;
  div.contents {
    padding: 0.5em 1em;
  }
  h3 {
    .rounded(3px 3px 0px 0px);
    margin: 0;
    font-size: 0.9em;
    font-weight: bold;
    color: white;
    background-color: #bbb;
    padding: 0 1em;
  }
}
div.improvable {
  border: 1px solid #73A76F;
  h3 {
    background-color: #73A76F;
  }
}
div.fixme {
  border: 1px solid #D40000;
  h3 {
    background-color: #D40000;
  }
}
div.advanced {
  border: 1px solid #708090;
  h3 {
    background-color: #708090;
  }
}
div.tested_for {
  border: 1px solid #4A9596;
  h3 {
    background-color: #4A9596;
  }
}
div.left {
  border: 1px solid #3E6E58;
  h3 {
    background-color: #3E6E58;
  }
}
div.warning {
  border: 1px solid #d40000;
  h3 {
    background-color: #d40000;
  }
}
div.warning_important {
  .rounded(5px);
  border: 1px solid #d40000;
  background-color: #D40000;
  color: white;
  font-weight: bold;
  margin: 0px auto 20px auto;
  position: relative;
  text-align: center;
  width: 75%;
  a {
    color: white;
  }
}
div.experts {
  border: 1px solid #666;
  h3 {
    background-color: #666;
  }
}
div.knowledge {
  border: 1px solid #d7b97b;
  h3 {
    background-color: #d7b97b;
  }
  .contents {
    margin-left: 15px;
  }
  .anchor {
    background-image: none;
  }
}
div.workinprogress {
  border: 1px solid #3F7DB1;
  h3 {
    background-color: #3F7DB1;
  }
}
.toc {
  padding: .5em;

  @border-toc: 1px solid #E9C790;
  border-bottom: @border-toc;
  border-top: @border-toc;

  background-image: url(../img/wiki/toc.png);
  background-position: top right;
  background-repeat: no-repeat;

  > ol {
    columns: 25ch 3; /* ideal width and maximum of columns */
    column-gap: 2em; /* otherwise the numerations are hidden in Chrome */
  }

  .head {
    font-weight: bold;
  }

  .head > ol {
    margin-top: 1.8em;
  }
}
.toc a.toctoggle,.toc .head a {
  text-decoration: none;
}
.key {
  display: inline;
  border-width: 0.2em;
  border-style: solid;
  border-color: #ddd #bbb #bbb #ddd;
  background-color: #eee;
  padding: 0.1em 0.4em;
  font-size: 0.8em;
  white-space: pre;
  * {
    display: inline;
  }
}
.headerlink {
  display: none;
  margin: 0 0 0 0.2em;
  text-decoration: none;
  color: #999;
}
h1:hover *, h2:hover *, h3:hover *, h4:hover *, h5:hover *, h6:hover * {
  display: inline;
}
.anchor {
  float: right;
  width: 16px;
  height: 16px;
  background-image: url(../img/anchor.png);
}
.highlighted {
  background-color: #ffee33;
}
div.edited {
  border: 1px solid #597A00;
  padding: 0.4em;
  font-size: 0.8em;
  strong {
    color: #597A00;
  }
}
div.moderated {
  border: 1px solid #cc7777;
  padding: 0.4em;
  font-size: 0.8em;
  strong {
    color: #aa3333;
  }
}
div.moderated p, div.edited p {
  margin: 0;
}


/* custom 'emojis' that are not included in unicode and thus use a sprite */
span[class^='icon-'] {
  display: inline-block;
}
span {
  &.icon-frog-xmas {
    .sprite(@frog-xmas);
  }
  &.icon-tux {
    .sprite(@tux);
  }
  &.icon-ubuntu {
    .sprite(@ubuntu);
  }
  &.icon-ubuntugnome {
    .sprite(@ubuntugnome);
  }
  &.icon-kubuntu {
    .sprite(@kubuntu);
  }
  &.icon-lubuntu {
    .sprite(@lubuntu);
  }
  &.icon-ubuntumate {
    .sprite(@ubuntumate);
  }
  &.icon-mythbuntu {
    .sprite(@mythbuntu);
  }
  &.icon-ubuntutouch {
    .sprite(@ubuntutouch);
  }
  &.icon-xubuntu {
    .sprite(@xubuntu);
  }
  &.icon-overview {
    .sprite(@overview);
  }
}


/* table styles for each ubuntu derivat */
tr {
  &.titel {
    background: #E2C890;
    color: @black;
    font-weight: bold;
    text-align: center;
  }
  &.kopf {
    background: @yellow_light;
    color: @black;
    font-weight: bold;
  }
  &.normal {
    background: @yellow_light;
    color: @black;
  }
  &.trennzeile {
    background: #DDDDDD;
    color: @black;
  }
  &.highlight {
    background: @grey_light;
    color: @black;
  }
  &.verlauf {
    .table-header-gradient();
    color: @black;
    font-weight: bold;
    text-align: center;
  }
}

tr.kde {
  &-titel {
    background: #0057AE;
    color: @white;
    font-weight: bold;
    text-align: center;
  }
  &-kopf {
    background: @blue_moderate;
    color: @white;
    font-weight: bold;
  }
  &-normal {
    background: @blue_moderate;
    color: @white;
  }
  &-highlight {
    background: #C0DAFF;
    color: @black;
  }
}

tr.xfce {
  &-titel {
    background: #B3DEFD;
    color: @black;
    font-weight: bold;
    text-align: center;
  }
  &-kopf {
    background: @grey_lighter;
    color: @black;
    font-weight: bold;
  }
  &-normal {
    background: @grey_lighter;
    color: @black;
  }
  &-highlight {
    background: @grey_lighter;
    color: @black;
  }
}

tr.lxde {
  &-titel {
    background: #212121;
    color: @white;
    font-weight: bold;
    text-align: center;
  }
  &-kopf {
    background: @blue_dark;
    color: @white;
    font-weight: bold;
  }
  &-normal {
    background: @blue_dark;
    color: @white;
  }
  &-highlight {
    background: #474747;
    color: @white;
  }
}

tr.edu {
  &-titel {
    background: #9c0000;
    color: @white;
    font-weight: bold;
    text-align: center;
  }
  &-kopf {
    background: #d39528;
    color: @white;
    font-weight: bold;
  }
  &-normal {
    background: #e1dac6f;
    color: @white;
  }
  &-highlight {
    background: #f4f2e7;
    color: @black;
  }
}

tr.studio {
  &-titel {
    background: @black_mostly;
    color: @blue_pure;
    font-weight: bold;
    text-align: center;
  }
  &-kopf {
    background: @grey;
    color:@blue_pure;
    font-weight: bold;
  }
  &-normal {
    background: @grey;
    color: @blue_pure;
    font-weight: bold;
  }
  &-highlight {
    background: @black_mostly;
    color: @white;
  }
}

td.befehl {
  background: #464646;
  color: @white;
  font-family: monospace;
}

td.gruen {
  background: #CCFF99;
  color: @black;
  font-weight: bold;
  text-align: center;
}
td.grau {
  background: @grey_light;
  color: @black;
  text-align: center;
}
td.gelb {
  background: #FFFF99;
  color: @black;
  text-align: center;
}
td.rot {
  background: #FFCC99;
  color: @black;
  text-align: center;
}

div.award {
  border: 1px solid @yellow_dark;
  h3 {
    background-color: @yellow_dark;
  }
}
div.ut_box {
  border: 1px solid @ut_box_orange;
  h3 {
    background-color: @ut_box_orange;
  }
}

